[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/fonts/Main_Menu_Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/menues/Mockup for I just want to do my job Backgroundcopy.png" type="Texture" id=2]
[ext_resource path="res://scripts/Video_Settings.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 64 )
modulate_color = Color( 0.831373, 0.0392157, 0, 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.298039, 0.47451, 0.854902, 1 )
thickness = 5

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Video_Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Test" type="Sprite" parent="."]
position = Vector2( 918, 518 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Fullscreen_Container" type="CenterContainer" parent="."]
margin_left = 960.0
margin_top = 250.0
margin_right = 1260.0
margin_bottom = 300.0
use_top_left = true

[node name="Fullscreen_Button" type="CheckButton" parent="Fullscreen_Container"]
margin_left = -124.0
margin_top = -20.0
margin_right = 123.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
pressed = true
text = "Fullscreen"

[node name="Return_Container" type="CenterContainer" parent="."]
margin_left = 960.0
margin_top = 750.0
margin_right = 1260.0
margin_bottom = 800.0
rect_min_size = Vector2( 250, 50 )
use_top_left = true

[node name="Return_Button" type="Button" parent="Return_Container"]
margin_left = -59.0
margin_top = -16.0
margin_right = 58.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Return"

[node name="Gamma_Slider" type="HSlider" parent="."]
anchor_top = 0.007
anchor_bottom = 0.007
margin_top = 352.44
margin_right = 1920.0
margin_bottom = 416.44
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 4 )
min_value = 1.0
max_value = 3.0
step = 0.5
value = 1.0
scrollable = false

[node name="Gamma" type="Label" parent="."]
margin_left = 889.0
margin_top = 320.0
margin_right = 1039.0
margin_bottom = 385.0
rect_min_size = Vector2( 150, 25 )
text = "Gamma


"
align = 1
valign = 1

[connection signal="toggled" from="Fullscreen_Container/Fullscreen_Button" to="." method="_on_Fullscreen_Button_toggled"]
[connection signal="pressed" from="Return_Container/Return_Button" to="." method="_on_Return_Button_pressed"]
[connection signal="value_changed" from="Gamma_Slider" to="." method="_on_HSlider_value_changed"]
